[gd_scene load_steps=4 format=2]

[ext_resource path="res://imagem_2023-03-18_025830930-removebg-preview.png" type="Texture" id=1]
[ext_resource path="res://personagem.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 97.7548

[node name="Sprite" type="Sprite"]
position = Vector2( 640, 360 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="tempo_recarga" type="Timer" parent="."]
wait_time = 0.1

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -3.51001, 4.88489 )
scale = Vector2( 0.969786, 0.712032 )
shape = SubResource( 1 )

[connection signal="timeout" from="tempo_recarga" to="." method="_on_tempo_recarga_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
